# ML-Project

./: .gitignore  PROJECT_ABSTRACT.md  README.md  pyproject.toml
src/: preprocessing.py
src/dashboard/: app.py
src/dashboard/components/: plots.py
src/gradient_boosting/: experiments.py  model.py
src/logistic_regression/: experiments.py  model.py  visualize.py
src/neural_network/: experiments.py  model.py
src/shared/: base_model.py  config.py  evaluation.py  preprocessing.py
tests/: test_preprocessing.py
