[project]
name = "student-dropout-prediction"
version = "0.1.0"
description = "Predicting student academic outcomes using classification methods"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.4",
    "imbalanced-learn>=0.12",
    "pytest>=8.0",
    "streamlit>=1.30",
]
